udemy/ingress/Other/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  annotations:
    #kubernetes.io/ingress.class: nginx
    alb.ingress.kubernetes.io/scheme: internal
    external-dns.alpha.kubernetes.io/hostname: test.bamboopayment.com
    external-dns.alpha.kubernetes.io/ingress-hostname-source: annotation-only
spec:
  #ingressClassName: ingress-nginx-controller
  rules:
  - host: prueba.test.bamboopayment.com
    http:
      paths:
      - path: /
        backend:
          service:
            name: nginx
            port:
              number: 80
        pathType: Prefix
